@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-18T13:48:50Z",
-  "count" : 229,
-  "count_minmax" : [ 229, 229 ],
-  "count_decinc" : [ -0, +229 ],
-  "uniques" : 7,
-  "uniques_minmax" : [ 7, 7 ],
-  "uniques_decinc" : [ -0, +7 ]
+  "timestamp" : "2022-05-18T16:37:40Z",
+  "count" : 260,
+  "count_minmax" : [ 229, 260 ],
+  "count_decinc" : [ -0, +260 ],
+  "uniques" : 8,
+  "uniques_minmax" : [ 7, 8 ],
+  "uniques_decinc" : [ -0, +8 ]
 }
